- update the dependencies of jmimemagic - fix class name for Class.forName